<resources>
    <string name="app_name">SCAP - Profesores</string>
    <string name="Bienvenido">Bienvenido!</string>
    <string name="Descripcion_login">Porfavor introduzca su correo y contraseña para continuar.</string>
    <string name="Email_hint">ejemplo@dominio.cl</string>
    <string name="SignIn">Ingresar</string>
    <string name="Colegio">Antes de seguir, porfavor seleccione su colegio:</string>
    <string name="Titulo_Menu_Principal">¡Bienvenido Profesor!</string>
    <string name="Descripcion_menu">¿Qué actividad desea realizar?</string>
    <string name="Imagen_SES">Actividad de Estudio Semanal</string>
    <string name="Imagen_actividades">Pruebas, Tareas o Materiales</string>
    <string name="Titulo_calendario">Calendario de Actividades</string>
    <string name="Descripcion_calendario">Aquí puedes revisar, editar, crear o borrar una actividad.</string>
    <string name="Actividades">Actividades del día</string>
    <string name="Descripcion_menu_actividades">Selecciona un curso y luego podrás ver las actividades de este día para ese curso</string>
    <string name="seleccion_actividades">¿Qué desea agregar?</string>
    <string name="Titulo_SES">Estudio Semanal</string>
    <string name="Descripcion_SES">Aquí puede administrar y revisar sus actividades SES</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Tarea">Tarea</string>
    <string name="Prueba">Prueba</string>
    <string name="Materiales">Materiales</string>
    <string name="Materia">Materia:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Cant_apoderados">Tu actividad ha sido revisada por:</string>
    <string name="Descripcion">Descripción:</string>
    <string name="Entonces">Presiona para revisar las respuestas:</string>
    <string name="Donde">En donde, ellos valoraron:</string>
    <string name="Ahora">Ahora:</string>
    <string name="Continuar">Continuar</string>
    <string name="Enviar">Enviar</string>
    <string name="Descripcion_colegios">Porfavor, proceda a seleccionar el colegio donde desea entregar el material.</string>
    <string name="Profesor">Profesor:</string>
    <string name="Seleccione_materia">Porfavor seleccione la materia correspondiente de su actividad:</string>
    <string name="Resp_correctas">En terminos de dificultad:</string>
    <string name="Resp_erroneas">En términos de tiempo (minutos):</string>
    <string name="Descripcion_tareas">Aqui puedes ingresar la descripción de la tarea a solicitar, recuerda que esta tarea va a ser vista por los apoderados para incentivar el estudio de los alumnos.</string>
    <string name="Descripcion_pruebas">Aquí puedes informar a los apoderados de alguna evaluación que desees realizar, recuerda tratar de informar los tópicos a evaluar para que ellos puedan repasar con sus alumnos.</string>
    <string name="Descripcion_materiales">Aquí puedes solicitar materiales para tu clase, estos le llegarán a los apoderados, igualmente hazles llegar a los alumnos esta lista, para no quitarles responsabilidades a ellos.</string>
    <string name="Descripcion_ses_detalle_1"></string>
    <string name="Boton_descripcion_SES">Ver detalles</string>
    <string name="Acividades_Header">Respuestas de los Apoderados</string>
    <string name="Descripcion_detalle_respuesta">Detalles de la respuesta</string>
    <string name="Nombre_apoderado">Nombre apoderado:</string>
    <string name="Respuesta">Respuestas:</string>
    <string name="Comentarios">Comentarios:</string>
    <string name="pregunta_3">Motivacion:</string>
    <string name="Tiempo">Tiempo:</string>
    <string name="Dificultad">Dificultad:</string>
    <string name="Pregunta3">Motivacion:</string>
</resources>
