<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    tools:context=".Activities.DetailAnswerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Descripcion_detalle_respuesta"
            android:textColor="@color/blanco"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/blanco"
                    android:text="@string/Nombre_apoderado"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nombre_apoderado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blanco"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/blanco"
                android:text="@string/Respuesta"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:text="@string/Tiempo"
                    android:textColor="@color/blanco"/>

                <TextView
                    android:id="@+id/respuesta_tiempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:textColor="@color/blanco"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:text="@string/Dificultad"
                    android:textColor="@color/blanco"/>

                <TextView
                    android:id="@+id/respuesta_dificultad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:textColor="@color/blanco"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:text="@string/Pregunta3"
                    android:textColor="@color/blanco"/>

                <TextView
                    android:id="@+id/respuesta_pregunta3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:textColor="@color/blanco"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Respuesta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blanco"
                    android:textSize="16dp"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="16dp"
                android:textColor="@color/blanco"
                android:text="@string/Comentarios"
                />

            <TextView
                android:id="@+id/detalle_respuesta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blanco"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:textSize="16dp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>